--- a/style.css
+++ b/style.css
@@ -29,10 +29,6 @@
     transform: translateY(-5px) translateX(5px) rotate(5deg);
 }
 
-.mauri{
-    background-color: brown;
-}
-
 .fizz:hover{
     background-color: beige;
 }
@@ -43,4 +39,55 @@
 
 .fizzbzz:hover{
     transform: rotate(5deg) translateY(-5px);
+}
+
+.controls{
+    background-color: #e7e7e7;
+    padding: 15px;
+    border-radius: 5px;
+    display: flex;
+    gap: 15px;
+
+}
+
+.input-group{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.input-group label{
+    font-size: 12px;
+}
+
+.input-group input{
+    padding-left: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.input-group input:focus{
+    border-color: #b7fb87;
+}
+
+#generate{
+    background-color: #b7fb87;
+    border: none;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 5px;
+    transition: background-color 0.5s, transform 0.3s;
+}
+
+#generate:hover{
+    background-color: #97f653;
+    font-weight: bold;
+}
+
+#generate:active{
+    transform: scale(0.7);
+}
+
+.mauri{
+    background-color: brown;
 }
